# services

./: .gitignore  Cargo.toml  README.md  dotenv-example
docs/: book.toml
docs/src/: README.md  SUMMARY.md  overview.md
docs/src/accounts/: index.md
docs/src/accounts/v1/: access.md  accessto.md  allow.md  change-email.md  change-password.md  create.md  delete.md  disallow.md  index.md  login.md  regeneratetoken.md  rename.md  resend-verify.md  set-status.md
docs/src/jobs/v1/: jobs.md  unqueue.md
docs/src/storage/: index.md
docs/src/storage/v1/: copy.md  delete-multiple.md  delete.md  diritems.md  exists.md  file.md  index.md  mkdir-multiple.md  mkdir.md  move.md  touch.md  tree.md  upload.md  visibility.md
docs/src/tex/compile/: index.md
docs/src/tex/compile/v1/: simple.md
docs/src/tex/generic/v1/: create.md  pfp.md  profile-only.md  profile.md  reset-pfp.md  reset-profile.md  set-pfp.md  set-profile.md
docs/src/triggers/: index.md
docs/src/triggers/v1/: index.md  peek.md  revoke.md  use.md
docs/src/usercontent/: index.md
docs/src/usercontent/v1/: diritems.md  exists.md  file.md  index.md  tree.md
docs/src/v1/: account.md  index.md
src/: lib.rs  main.rs  static.rs  values.rs
src/api/: mod.rs
src/api/accounts/: mod.rs
src/api/accounts/v1/: access.rs  accessto.rs  allow.rs  change_email.rs  change_password.rs  create.rs  delete.rs  disallow.rs  invite.rs  login.rs  mod.rs  regeneratetoken.rs  rename.rs  resend_verify.rs  set_status.rs
src/api/gmt/: mod.rs
src/api/gmt/generic/v1/: create.rs  mod.rs  profile.rs  set_profile.rs  set_profile_image.rs
src/api/jobs/: mod.rs
src/api/jobs/v1/: jobs.rs  mod.rs  unqueue.rs
src/api/publish/v1/: mod.rs
src/api/services/: mod.rs
src/api/services/v1/: error.rs  mod.rs  responses.rs
src/api/services/v1/account/: create.rs  delete.rs  gettoken.rs  login.rs  mod.rs  regeneratetoken.rs  rename.rs
src/api/services/v1/storage/: copy.rs  copy_overwrite.rs  delete.rs  diritems.rs  file.rs  mkdir.rs  mod.rs  move.rs  move_overwrite.rs  overwrite.rs  read.rs  remove_visibility.rs  set_visibility.rs  touch.rs  upload.rs  (+2 more)
src/api/storage/: mod.rs
src/api/storage/v1/: copy.rs  copy_overwrite.rs  delete.rs  delete_multiple.rs  diritems.rs  exists.rs  file.rs  mkdir.rs  mkdir_multiple.rs  mod.rs  move.rs  move_createdirs.rs  move_overwrite.rs  read.rs  remove_visibility.rs  set_visibility.rs  touch.rs  tree.rs  upload.rs  upload_createdirs.rs  upload_overwrite.rs
src/api/tex/: mod.rs
src/api/triggers/: mod.rs
src/api/triggers/v1/: mod.rs  peek.rs  revoke.rs  use.rs
src/api/usercontent/: mod.rs
src/api/usercontent/v1/: diritems.rs  exists.rs  file.rs  main.rs  mod.rs  tree.rs
src/api/v1/: error.rs  mod.rs  responses.rs
src/api/v1/account/: create.rs  delete.rs  gettoken.rs  mod.rs  regeneratetoken.rs  rename.rs
src/api/v1/storage/: mkdir.rs  mod.rs  overwrite.rs  read.rs  write_new.rs
src/api/v1/trigger/: mod.rs  use.rs
src/api/v1/usercontent/: mod.rs  overwrite.rs  upload.rs
src/functions/: bson_rw.rs  bytes_from_multipart.rs  case_insensitive.rs  cookie_to_str.rs  dir_operations.rs  dir_size.rs  editable.rs  file_check.rs  from_res.rs  fs.rs  gets.rs  hash.rs  mime_collapse.rs  mod.rs  profile.rs  to_res.rs
src/pages/: mod.rs  trigger.rs
src/structs/: account.rs  collection.rs  counters.rs  error.rs  jobs.rs  mod.rs  pending.rs  services.rs  servicetriggers_wrapper.rs  sse.rs  trigger.rs  visibilities.rs
src/structs/configs/: credentials.rs  defaults.rs  limits.rs  mod.rs  storage.rs  tex.rs  whitelist.rs
src/structs/jobs/: jobs.rs  latex.rs  markdown.rs  mod.rs
src/structs/tex/: mod.rs  publish.rs
src/structs/triggerables/: emailverification.rs  invite.rs  mod.rs
src/tests/: account.rs  connectivity.rs  mod.rs
src/traits/: collection_item.rs  configtrait.rs  error_trait.rs  mod.rs  peekable.rs  res_trait.rs  taskitem.rs  triggerable.rs
static/css/: triggernotfound.css
static/css/dark/: triggernotfound.css
static/htmls/: triggernotfound.html  unpeekable.html  verifyemail.html
static/scripts/: trigger.js
usercontent/3fac6f581190db5ba85bf54ebefdbd8c/: test.toml
(+17 files in other folders)
