[package]
name = "goodmorning-services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4.3", features = ["rustls"]}
rustls = "0.20"
rustls-pemfile = "1"
async-trait = "0.1"
chrono = "0.4"
dotenv = "0.15"
simplelog = "0.12"
log = "0.4"
dyn-clone = "1.0"
fastrand = "1.9"
hex = "0.4"
lettre = { version = "0.10", features = ["tokio1", "tokio1-native-tls"] }
mongodb = "2.4"
serde = "1.0"
sha2 = "0.10"
tokio = "1.26"
typetag = "0.2"
actix-multipart = "0.6"
futures-util = "0.3"
async-recursion = "1.0"
actix-files = "0.6"
actix-extensible-rate-limit = "0.2"
sudo = "0.6"
# goodmorning-bindings = {path = "../rust-bindings", features = ["services-v1", "res-serde", "req-serde", "restrait"], version = "*"}
goodmorning-bindings = {git = "https://github.com/goodmorning-network/rust-bindings", rev = "eaa9cee", features = ["services-v1", "res-serde", "req-serde", "restrait"], version = "*"}
once_cell = "1.18"
regex = "1.8"
xdg-mime = "0.3"
mime = "0.3"

[dev-dependencies]
