[package]
name = "goodmorning-services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4.3", features = ["rustls"]}
rustls = "0.20"
rustls-pemfile = "1"
async-trait = "0.1"
chrono = "0.4"
simplelog = "0.12"
log = "0.4"
dyn-clone = "1.0"
fastrand = "1.9"
hex = "0.4"
lettre = { version = "0.10", features = ["tokio1", "tokio1-native-tls"] }
mongodb = "2.4"
serde = "1.0"
sha2 = "0.10"
tokio = { version = "1.26", features = ["time"] }
typetag = "0.2"
actix-multipart = "0.6"
futures-util = "0.3"
async-recursion = "1.0"
actix-files = "0.6"
html-escape = "0.2"
# actix-extensible-rate-limit = "0.2"
# goodmorning-bindings = {path = "../rust-bindings", version = "*"}
goodmorning-bindings = {git = "https://github.com/gmornin/rust-bindings", rev="1d0c340", version = "*"}
regex = "1.8"
xdg-mime = "0.3"
mime = "0.3"
# actix-web-lab = "0.19"
# parking_lot = "0.12"
dirs = "5.0"
serde_yaml = "0.9"
serde-inline-default = "0.1.1"
serde_default = "0.1.0"

# pulldown-cmark = "0.9"
# markdown = "1.0.0-alpha"

[dev-dependencies]

[features]
default = ["v1-all"]
v1-all = ["v1"]
v1 = []
